fix for left side bar incorrect size with footer
When the footer is present it can cover the left side navbar because
it's height is not adjusted.

In "/js/docks.js" there is a function "checkNavSizes()" that fixes this
issue with the right navbar "toc-nav", but two changes are needed. First
in "docks.js" one line is added to also update the "col-nav". Second in
"/_scss/_layout.css" "sidebar" the "height: 100% !important" must be
changed to just "height: 100%" or the new script won't update correctly.
The "toc-nav" uses "sidebar-wrapper" which already uses "height: 100%"
and allows "checkNavSizes()" to work.

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -234,6 +234,6 @@ section.section {
     overflow-y: auto;
     padding: 20px 10px 100px 0;
     position: fixed;
-    height: 100% !important;
+    height: 100%;
     width: 270px;
 }
